--- a/index.html
+++ b/index.html
@@ -12,7 +12,28 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <h1>hello</h1>
+    <nav class="nav">
+      <section id="page-title">
+        <h2>myWebNow</h2>
+      </section>
+      <section class="nav-btns">
+        <h2>Home</h2>
+        <h2>Why Us</h2>
+        <h2>Contact Us</h2>
+        <button>Login</button>
+        <button>Support</button>
+      </section>
+    </nav>
+    <article class="home-prompt">
+      <section>
+        <h1>Get a website in 15 minutes <span>or less</span></h1>
+      </section>
+      <section class="search">
+        <input />
+        <button>Search</button>
+      </section>
+    </article>
+    
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
