Add prompt down arrow section

--- a/index.html
+++ b/index.html
@@ -26,11 +26,15 @@
     </nav>
     <article class="home-prompt">
       <section>
-        <h1>Get a website in 15 minutes <span>or less</span></h1>
+        <h1 class="main-heading">Get a website in 15 minutes <span>or less</span></h1>
       </section>
       <section class="search">
         <input />
         <button>Search</button>
+      </section>
+      <section class="prompt-down">
+        <h3>LEARN HOW WE CAN ENHANCE YOUR BUSINESS</h3>
+        <button id="down-arrow-btn">x</button>
       </section>
     </article>
     
