--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
         <button id="down-arrow-btn">x</button>
       </section>
     </article>
+    <article class="more-info">
+      <section class="account-details">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        </p>
+        <button id="create-act-btn">
+          Create Your Account
+        </button>
+      </section>
+    </article>
     
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
