Add services section

--- a/index.html
+++ b/index.html
@@ -46,6 +46,37 @@
           Create Your Account
         </button>
       </section>
+      <section class="services">
+        <h3>Our Services</h3>
+        <article class="service">
+          <img />
+          <h4>WEB HOSTING</h4>
+          <p>
+            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
+          </p>
+        </article>
+        <article class="service">
+          <img />
+          <h4>RESELLERS</h4>
+          <p>
+            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
+          </p>
+        </article>
+        <article class="service">
+          <img />
+          <h4>VPS HOSTING</h4>
+          <p>
+            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
+          </p>
+        </article>
+        <article class="service">
+          <img />
+          <h4>CLOUD HOSTING</h4>
+          <p>
+            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
+          </p>
+        </article>
+      </section>
     </article>
     
     <!--[if lt IE 7]>
