--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
         </p>
-        <button id="create-act-btn">
+        <button class="create-act-btn">
           Create Your Account
         </button>
       </section>
@@ -76,6 +76,14 @@
             At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
           </p>
         </article>
+      </section>
+      <section class="create-prompt">
+        <h2>Are you ready?</br>
+            create an account, or contact us.
+        </h2>
+        <button class="create-act-btn">
+          Create Your Account
+        </button>
       </section>
     </article>
     
