--- a/index.html
+++ b/index.html
@@ -86,6 +86,35 @@
         </button>
       </section>
     </article>
+    <article class="contact-section">
+      <ul class="contact-info">
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+      <ul class="contact-info">
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+      </ul>
+      <ul class="contact-info">
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+      </ul>
+      <ul class="contact-info">
+          <li>Facebook</li>
+          <li>Youtube</li>
+          <li>Twitter</li>
+      </ul>
+      <ul class="contact-info">
+
+      </ul>
+    </article>
     
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
