Add contact section lists skeletons

--- a/index.html
+++ b/index.html
@@ -88,31 +88,48 @@
     </article>
     <article class="contact-section">
       <ul class="contact-info">
-        <li></li>
-        <li></li>
-        <li></li>
+        <div>
+          <i></i>
+          <li>+ 1 800 WEBSITE</li>
+        </div>
+        <div>
+          <i></i>
+          <li>hello@mywebnow.com</li>
+        </div>
+        <div>
+          <i></i>
+          <li>
+            1 Main st</li>
+            Floor 6</br>
+            New York, NY 10005
+          </li>
+        </div>
       </ul>
       <ul class="contact-info">
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+        <li>Company</li>
+        <li>About Us</li>
+        <li>News</li>
+        <li>FAQ</li>
+        <li>Contact Us</li>
       </ul>
       <ul class="contact-info">
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+        <li>Services</li>
+        <li>Web Hosting</li>
+        <li>Cloud Hosting</li>
+        <li>VPS Servers</li>
+        <li>Domain Names</li>
       </ul>
       <ul class="contact-info">
-          <li>Facebook</li>
-          <li>Youtube</li>
-          <li>Twitter</li>
+        <li>Others</li>
+        <li>Transfer domains</li>
+        <li>Customer Portal</li>
+        <li>Support Portal</li>
+        <li>Video Tutorials</li>
       </ul>
       <ul class="contact-info">
-
+        <li>Facebook</li>
+        <li>Youtube</li>
+        <li>Twitter</li>
       </ul>
     </article>
     
