Restructure welcome prompt

--- a/index.html
+++ b/index.html
@@ -25,17 +25,21 @@
           <button>Support</button>
         </section>
       </nav>
-      <section>
-        <h1 class="main-heading">Get a website in 15 minutes <span>or less</span></h1>
-      </section>
-      <section class="search">
-        <input />
-        <button>Search</button>
-      </section>
-      <section class="prompt-down">
-        <h3>LEARN HOW WE CAN ENHANCE YOUR BUSINESS</h3>
-        <button id="down-arrow-btn">x</button>
-      </section>
+      <article>
+        <section class="main-heading">
+          <h1 class="main-prompt">
+            Get a website in 15 minutes <span>or less</span>
+          </h1>
+          <section class="search">
+            <input />
+            <button>Search</button>
+          </section>
+        </section>
+        <section class="prompt-down">
+          <h3>LEARN HOW WE CAN ENHANCE YOUR BUSINESS</h3>
+          <button id="down-arrow-btn">x</button>
+        </section>
+      </article>
     </article>
     <article class="more-info">
       <section class="account-details">
