Add services section styles

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             Get a website in 15 minutes <span>or less</span>
           </h1>
           <section class="search">
-            <input />
-            <button>Search</button>
+            <input class="domain-input" placeholder="write your domain name here"/>
+            <button id="search-btn">Search</button>
           </section>
         </section>
         <section class="prompt-down">
@@ -42,16 +42,16 @@
       </article>
     </article>
     <article class="more-info">
-      <section class="account-details">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      <section class="description">
+        <p class="description-text">
+           adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
         </p>
         <button class="create-act-btn">
-          Create Your Account
+          CREATE YOUR ACCOUNT
         </button>
       </section>
+      <h3>Our Services</h3>
       <section class="services">
-        <h3>Our Services</h3>
         <article class="service">
           <img />
           <h4>WEB HOSTING</h4>
