--- a/index.html
+++ b/index.html
@@ -53,32 +53,40 @@
       <h3>Our Services</h3>
       <section class="services">
         <article class="service">
-          <img />
-          <h4>WEB HOSTING</h4>
-          <p>
-            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
-          </p>
+          <img src="./images/browser.png">
+          <div>
+            <h4>WEB HOSTING</h4>
+            <p>
+              At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
+            </p>
+          </div>
         </article>
         <article class="service">
-          <img />
-          <h4>RESELLERS</h4>
-          <p>
-            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
-          </p>
+          <img src="./images/browser.png">
+          <div>
+            <h4>RESELLERS</h4>
+            <p>
+              At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
+            </p>
+          </div>
         </article>
         <article class="service">
-          <img />
-          <h4>VPS HOSTING</h4>
-          <p>
-            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
-          </p>
+          <img src="./images/browser.png">
+          <div>
+            <h4>VPS HOSTING</h4>
+            <p>
+              At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
+            </p>
+          </div>
         </article>
         <article class="service">
-          <img />
-          <h4>CLOUD HOSTING</h4>
-          <p>
-            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
-          </p>
+          <img src="./images/browser.png">
+          <div>
+            <h4>CLOUD HOSTING</h4>
+            <p>
+              At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
+            </p>
+          </div>
         </article>
       </section>
       <section class="create-prompt">
