--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <article class="home-prompt">
       <nav class="nav">
         <section id="page-title">
-          <h2>myWebNow</h2>
+          <h2 class="title">myWebNow</h2>
         </section>
-        <section class="nav-btns">
-          <h2>Home</h2>
-          <h2>Why Us</h2>
-          <h2>Contact Us</h2>
-          <button>Login</button>
-          <button>Support</button>
-        </section>
+        <ul class="nav-btns">
+          <li>Home</li>
+          <li>Why Us</li>
+          <li>Contact Us</li>
+          <li>Login</li>
+          <button id="support-btn">Support</button>
+        </ul>
       </nav>
       <article>
         <section class="main-heading">
