--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
             Get a website in 15 minutes <span>or less</span>
           </h1>
           <section class="search">
-            <input class="domain-input" placeholder="write your domain name here"/>
-            <button id="search-btn">Search</button>
+            <input class="domain-input" placeholder="Write your domain name here"/>
+            <button id="search-btn">
+              Search
+            </button>
           </section>
         </section>
         <section class="prompt-down">
-          <h3>LEARN HOW WE CAN ENHANCE YOUR BUSINESS</h3>
+          <h3 class="prompt-desc">LEARN HOW WE CAN ENHANCE YOUR BUSINESS</h3>
           <button id="down-arrow-btn">x</button>
         </section>
       </article>
