Create or contact section styles

--- a/index.html
+++ b/index.html
@@ -95,9 +95,14 @@
         <h2>Are you ready?</br>
             create an account, or contact us.
         </h2>
-        <button class="create-act-btn">
-          Create Your Account
-        </button>
+        <div class="buttons">
+          <button class="create-act-btn">
+            CREATE YOUR ACCOUNT
+          </button>
+          <button id="contact-btn">
+            CONTACT US
+          </button>
+        </div>
       </section>
     </article>
     <article class="contact-section">
