--- a/index.html
+++ b/index.html
@@ -106,49 +106,49 @@
       </section>
     </article>
     <article class="contact-section">
-      <ul class="contact-info">
+      <ul class="contact-info contact-number">
         <div>
           <i></i>
-          <li>+ 1 800 WEBSITE</li>
+          <li class="list-item list-title number">+ 1 800 WEBSITE</li>
         </div>
         <div>
           <i></i>
-          <li>hello@mywebnow.com</li>
+          <li class="list-item email">hello@mywebnow.com</li>
         </div>
         <div>
           <i></i>
-          <li>
-            1 Main st</li>
+          <li class="list-item">
+            1 Main St</br>
             Floor 6</br>
             New York, NY 10005
           </li>
         </div>
       </ul>
       <ul class="contact-info">
-        <li>Company</li>
-        <li>About Us</li>
-        <li>News</li>
-        <li>FAQ</li>
-        <li>Contact Us</li>
+        <li class="list-item list-title">Company</li>
+        <li class="list-item">About Us</li>
+        <li class="list-item">News</li>
+        <li class="list-item">FAQ</li>
+        <li class="list-item">Contact Us</li>
       </ul>
       <ul class="contact-info">
-        <li>Services</li>
-        <li>Web Hosting</li>
-        <li>Cloud Hosting</li>
-        <li>VPS Servers</li>
-        <li>Domain Names</li>
+        <li class="list-item list-title">Services</li>
+        <li class="list-item">Web Hosting</li>
+        <li class="list-item">Cloud Hosting</li>
+        <li class="list-item">VPS Servers</li>
+        <li class="list-item">Domain Names</li>
       </ul>
       <ul class="contact-info">
-        <li>Others</li>
-        <li>Transfer domains</li>
-        <li>Customer Portal</li>
-        <li>Support Portal</li>
-        <li>Video Tutorials</li>
+        <li class="list-item list-title">Others</li>
+        <li class="list-item">Transfer domains</li>
+        <li class="list-item">Customer Portal</li>
+        <li class="list-item">Support Portal</li>
+        <li class="list-item">Video Tutorials</li>
       </ul>
       <ul class="contact-info">
-        <li>Facebook</li>
-        <li>Youtube</li>
-        <li>Twitter</li>
+        <li class="list-item">Facebook</li>
+        <li class="list-item">Youtube</li>
+        <li class="list-item">Twitter</li>
       </ul>
     </article>
     
