--- a/index.html
+++ b/index.html
@@ -15,33 +15,35 @@
     <article class="home-prompt">
       <nav class="nav">
         <section id="page-title">
-          <h2 class="title">myWebNow</h2>
+          <h2 class="title">
+            myWebNow
+          </h2>
         </section>
         <ul class="nav-btns">
           <li>Home</li>
           <li>Why Us</li>
           <li>Contact Us</li>
           <li>Login</li>
-          <button id="support-btn">Support</button>
+          <button id="support-btn">
+            Support
+          </button>
         </ul>
       </nav>
-      <article>
-        <section class="main-heading">
-          <h1 class="main-prompt">
-            Get a website in 15 minutes <span>or less</span>
-          </h1>
-          <section class="search">
-            <input class="domain-input" placeholder="Write your domain name here"/>
-            <button id="search-btn">
-              Search
-            </button>
-          </section>
+      <section class="main-heading">
+        <h1 class="main-prompt">
+          Get a website in 15 minutes <span>or less</span>
+        </h1>
+        <section class="search">
+          <input class="domain-input" placeholder="Write your domain name here"/>
+          <button id="search-btn">
+            Search
+          </button>
         </section>
-        <section class="prompt-down">
-          <h3 class="prompt-desc">LEARN HOW WE CAN ENHANCE YOUR BUSINESS</h3>
-          <button id="down-arrow-btn">x</button>
-        </section>
-      </article>
+      </section>
+      <section class="prompt-down">
+        <h3 class="prompt-desc">LEARN HOW WE CAN ENHANCE YOUR BUSINESS</h3>
+        <button id="down-arrow-btn">\/</button>
+      </section>
     </article>
     <article class="more-info">
       <section class="description">
@@ -52,11 +54,11 @@
           CREATE YOUR ACCOUNT
         </button>
       </section>
-      <h3>Our Services</h3>
+      <h3 class="subheader">Our Services</h3>
       <section class="services">
         <article class="service">
           <img src="./images/browser.png">
-          <div>
+          <div class="service-cont">
             <h4>WEB HOSTING</h4>
             <p>
               At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
@@ -65,7 +67,7 @@
         </article>
         <article class="service">
           <img src="./images/browser.png">
-          <div>
+          <div class="service-cont">
             <h4>RESELLERS</h4>
             <p>
               At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
@@ -74,7 +76,7 @@
         </article>
         <article class="service">
           <img src="./images/browser.png">
-          <div>
+          <div class="service-cont">
             <h4>VPS HOSTING</h4>
             <p>
               At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
@@ -83,7 +85,7 @@
         </article>
         <article class="service">
           <img src="./images/browser.png">
-          <div>
+          <div class="service-cont">
             <h4>CLOUD HOSTING</h4>
             <p>
               At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
